fixed vertical alignment

--- a/server/static/css/default.css
+++ b/server/static/css/default.css
@@ -3,15 +3,14 @@ html {
 }
 
 body {
-	margin-right: auto;
-	margin-left: auto;
+	margin: auto;
 	position: relative;
 }
 
 .container {
 	text-align: center;
 	position: absolute;
-	top: 35%;
+	top: 100px;
   	left: 50%;
   	transform: translate(-50%, 50%);
 }
